atualizaçao do css

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	font-size: 22px;
 	color:rgb(0, 0, 0);
 	font-family: 'Caveat Brush', cursive;
-	background-image: linear-gradient(to bottom, rgba(255, 0, 179, 0.342),#a260c0);
+	background-image: linear-gradient(to bottom, rgba(255, 0, 179, 0.342),#d33c6e);
 	background-repeat: no-repeat;
 	background-size: cover;
 }
